...
            android:scaleType="fitCenter"
            android:src="@drawable/donation"/>

        <Space style="@style/espacio"/>

        <ImageButton
            android:id="@+id/boton_tipo_curso_educativo"
            android:layout_width="@dimen/dim70"
            android:layout_height="@dimen/dim70"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/education"/>

...
